--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,11 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+    
+app_teams:
+    path: '/teams'
+    controller: App\Controller\ArbitroController::index'
+
+app_tournament:
+    path: '/teams/{id}'
+    controller: App\Controller\ArbitroController::show'
